# EVMC: Ethereum Client-VM Connector API.
# Copyright 2019 The EVMC Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "evmc-client"
version = "7.4.0"
authors = ["Zigang Lin <vincent@secondstate.io>"]
license = "Apache-2.0"
repository = "https://github.com/ethereum/evmc"
description = "Bindings to EVMC (Client/Host specific)"
edition = "2018"

[dependencies]
evmc-sys = { path = "../evmc-sys", version = "7.4.0" }
libloading = "0.5"