# EVMC: Ethereum Client-VM Connector API.
# Copyright 2019 The EVMC Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "evmc-client"
version = "7.4.0"
authors = ["Zigang Lin <vincent@secondstate.io>"]
license = "Apache-2.0"
repository = "https://github.com/ethereum/evmc"
description = "Bindings to EVMC (Client/Host specific)"
edition = "2018"
build = "build.rs"

[dependencies]
evmc-sys = { path = "../evmc-sys" }
evmc-vm = { path = "../evmc-vm" }
enum_primitive = "0.1.1"
num = "0.3"
lazy_static = "1.4.0"

[build-dependencies]
cmake = "0.1.44"
