# EVMC: Ethereum Client-VM Connector API.
# Copyright 2019 The EVMC Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "ssvm-evmc-client"
version = "7.4.0"
authors = ["Zigang Lin <vincent@secondstate.io>"]
license = "Apache-2.0"
repository = "https://github.com/secondstate/evmc"
description = "Bindings to EVMC (Client/Host specific)"
edition = "2018"
build = "build.rs"

[dependencies]
evmc-sys = { version = "7.4.0", package = "ssvm-evmc-sys" }
evmc-vm = { version = "7.4.0", package = "ssvm-evmc-vm" }
enum_primitive = "0.1.1"
num = "0.3"

[build-dependencies]
cmake = "0.1.44"
