# EVMC: Ethereum Client-VM Connector API.
# Copyright 2019 The EVMC Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "evmc-declare"
version = "6.3.1"
authors = ["Jake Lang <jak3lang@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ethereum/evmc"
description = "Bindings to EVMC (VM declare macro)"
edition = "2018"

[dependencies]
quote = "0.6.12"
heck = "0.3.1"
proc-macro2 = "0.4.29"

# For documentation examples
evmc-vm = { path = "../evmc-vm" }

[dependencies.syn]
version = "0.15.33"
features = ["full"]

[lib]
proc-macro = true
