# EVMC: Ethereum Client-VM Connector API.
# Copyright 2022 The EVMC Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "evmc-loader"
version = "10.0.0-alpha.5"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ethereum/evmc"
description = "Bindings to EVMC (Loader bindings)"
edition = "2018"

[build-dependencies]
bindgen = "0.59"
cmake = "0.1"
